@@ -15,11 +15,11 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.026
-Acme::Ford::Prefect                            = 0.026
-Acme::Ford::Prefect::FFI                       = 0.23
+Acme::Alien::DontPanic                         = 0.027
+Acme::Ford::Prefect                            = 0.027
+Acme::Ford::Prefect::FFI                       = 0.24
 Alien                                          = 0.93
-Alien::Base                                    = 0.024
+Alien::Base                                    = 0.025
 Alien::bison                                   = 0.11
 Alien::bz2                                     = 0.17
 Alien::bz2::Installer                          = 0.05
@@ -69,7 +69,7 @@ Dist::Zilla::Plugin::OurPkgVersion             = 0.06
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.05
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.95
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.96
 FFI                                            = 1.09
 FFI::CheckLib                                  = 0.14
 FFI::ExtractSymbols                            = 0.03
@@ -111,6 +111,7 @@ Test::Clustericious::Cluster                   = 0.29
 Test::Exec                                     = 0.02
 Test::Fixme                                    = 0.15
 Test::Script                                   = 1.10
+Test::Script::Async                            = 0.01
 Test::Version                                  = 2.03
 Text::Hunspell::FFI                            = 0.01
 URI::ws                                        = 0.03
