@@ -569,6 +569,10 @@ Test::Script
 
 =item *
 
+Test::Script::Async
+
+=item *
+
 Test::Spelling
 
 =item *
