@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add Test::Script::Async
+  - Updated my dists to latest  
 
 1.83      2016-01-14 14:11:58 -0500
   - Remove File::IgnoreReadonly
